[gd_scene load_steps=2 format=3 uid="uid://cf8endj7vruag"]

[ext_resource type="Script" uid="uid://cdraeedita4ce" path="res://ui/game_ui.gd" id="1_script"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.588235)

[node name="StartMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="StartMenu"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 308.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "TINY TWIGS"

[node name="ControlLabel" type="Label" parent="StartMenu"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 413.0
offset_bottom = 142.0
theme_override_font_sizes/font_size = 20
text = "PLAYERS SELECTED: %d1-6: 
Change Player Count | F1-F6: Swap Keybinds | SPACE: Start"

[node name="PlayerSelectionList" type="VBoxContainer" parent="StartMenu"]
layout_mode = 0
offset_left = 20.0
offset_top = 180.0
offset_right = 420.0
offset_bottom = 600.0

[node name="GameHUD" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerStatusList" type="VBoxContainer" parent="GameHUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 600.0
theme_override_constants/separation = 10
